# config-get-rs

./: .gitignore  Cargo.toml  Clippy.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
src/: colors.rs  config.rs  config_get.rs  discovery.rs  error.rs  format.rs  lib.rs  main.rs  parsers.rs  remote.rs  status.rs  value.rs
tests/: integration_test.rs
