[package]
name = "config-get"
version = "0.1.4"
edition = "2021"
authors = ["Hadi Cahyadi <cumulus13@gmail.com>"]
description = "Cross-platform configuration file locator and reader for Rust. Auto-discovers .env, .ini, .toml, .json, .yml, .yaml from OS-standard locations."
license = "MIT"
repository = "https://github.com/cumulus13/config-get-rs"
homepage = "https://github.com/cumulus13/config-get-rs"
documentation = "https://docs.rs/config-get"
readme = "README.md"
keywords = ["config", "configuration", "env", "toml", "ini"]
categories = ["config", "filesystem"]
rust-version = "1.70"
exclude = [".github", "tests/fixtures"]

[lib]
name = "config_get"
path = "src/lib.rs"

[[bin]]
name = "config-get"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["toml", "yaml", "dotenv", "ini"]
all = ["toml", "yaml", "dotenv", "ini", "cli"]
toml = ["dep:toml"]
yaml = ["dep:serde_yaml"]
dotenv = ["dep:dotenvy"]
ini = ["dep:rust-ini"]
cli = ["dep:clap"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
log = "0.4"
dirs = "5"
indexmap = { version = "2", features = ["serde"] }

# Optional
toml = { version = "0.8", optional = true }
serde_yaml = { version = "0.9", optional = true }
dotenvy = { version = "0.15", optional = true }
rust-ini = { version = "0.21", optional = true }
clap = { version = "4", features = ["derive"], optional = true }

[dev-dependencies]
tempfile = "3.9"
pretty_assertions = "1"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
module_name_repetitions = "allow"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
